[gd_scene load_steps=3 format=3 uid="uid://c2l2fnou7nd7c"]

[ext_resource type="Script" uid="uid://bcswlo7mjkttd" path="res://Code/Shop.gd" id="1_n6kum"]
[ext_resource type="PackedScene" uid="uid://wwc4mfy0pemf" path="res://Scenes/ItemBuyCard.tscn" id="2_q2ej6"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n6kum")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="MainPanel" type="Panel" parent="Margin"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Margin/MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="Margin/MainPanel/Margin"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="Margin/MainPanel/Margin/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="Margin/MainPanel/Margin/VBox/HBox"]
layout_mode = 2
theme_type_variation = &"Title"
text = "拼少少"

[node name="Money" type="Label" parent="Margin/MainPanel/Margin/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"Title"
text = "当前持有资金: ￥%s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tabs" type="TabContainer" parent="Margin/MainPanel/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 2

[node name="显卡" type="Control" parent="Margin/MainPanel/Margin/VBox/Tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="Marign" type="MarginContainer" parent="Margin/MainPanel/Margin/VBox/Tabs/显卡"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Scroll" type="ScrollContainer" parent="Margin/MainPanel/Margin/VBox/Tabs/显卡/Marign"]
layout_mode = 2
scroll_deadzone = 20

[node name="GPU_Flow" type="HFlowContainer" parent="Margin/MainPanel/Margin/VBox/Tabs/显卡/Marign/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="场地" type="Control" parent="Margin/MainPanel/Margin/VBox/Tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="小道具" type="Control" parent="Margin/MainPanel/Margin/VBox/Tabs"]
layout_mode = 2
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="Margin/MainPanel/Margin/VBox/Tabs/小道具"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="Margin/MainPanel/Margin/VBox/Tabs/小道具/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Margin/MainPanel/Margin/VBox/Tabs/小道具/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="ItemsFlow" type="FlowContainer" parent="Margin/MainPanel/Margin/VBox/Tabs/小道具/MarginContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemBuyCard" parent="Margin/MainPanel/Margin/VBox/Tabs/小道具/MarginContainer/ScrollContainer/MarginContainer/ItemsFlow" instance=ExtResource("2_q2ej6")]
layout_mode = 2

[node name="ItemBuyCard2" parent="Margin/MainPanel/Margin/VBox/Tabs/小道具/MarginContainer/ScrollContainer/MarginContainer/ItemsFlow" instance=ExtResource("2_q2ej6")]
layout_mode = 2

[node name="EXIT" type="Button" parent="Margin/MainPanel/Margin/VBox"]
layout_mode = 2
text = "退出"

[connection signal="pressed" from="Margin/MainPanel/Margin/VBox/EXIT" to="." method="_on_exit_pressed"]
